--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
   </head>
   <body>
     <div class="container">
-      <div>
-        Check
+      <div className="card">
+        <form method="POST" action="main.html">
+            <div className="card-body">
+              <h1 className="card-title">Login</h1>
+              <label>User Id:  </label>
+              <input id="id" name="id" type="text" /> 
+          </div>
+        </form>
       </div>
     </div>
   </body>
