--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <div className="card-body">
           <h5 class="card-title">Authenticated Page</h5>
           <p class="card-text text-warning bg-dark"">Please Go to the Unauthenticated Page</p>
-          <a href="https://hjeong2020.github.io/lp-project/index.html" class="btn btn-primary" target=_blank>Click Here</a>
+          <a href="index.html" class="btn btn-primary">Click Here</a>
         </div>
       </div>
     </div>
