--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container mt-30 pt-30">
         <div className="card" style="width: 18rem;">
             <div className="card-body">
                 <h5 class="card-title">Authenticated Page</h5>
