--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div className="card-body">
           <h5 class="card-title">Unauthenticated Page</h5>
           <p class="card-text">Please Go to the Authenticated Page</p>
-          <a href="main.html" class="btn btn-primary" target=_blank>Click Here</a>
+          <a href="main.html" class="btn btn-primary">Click Here</a>
         </div>
       </div>
     </div>
