--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>LP Brand</title>
+    <title>LP Brand Authenticated Page</title>
     <meta lang="en-us">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
