--- a/main.html
+++ b/main.html
@@ -28,8 +28,9 @@
                 <p class="card-text text-warning bg-dark"">Please Go to the Unauthenticated Page</p>
           <a href=" index.html" class="btn btn-primary">Click Here</a>
             </div>
+          <input id="cart" type="text" name="cart" />
         </div>
-        <div id="cart" value="1000">Cart Value: 1000</div>
+        
     </header>
 </body>
 
