--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
                 <p class="card-text text-warning bg-dark"">Please Go to the Unauthenticated Page</p>
           <a href=" index.html" class="btn btn-primary">Click Here</a>
             </div>
-          <input id="cart" type="text" name="cart" />
+          <input id="cart" type="text" name="cart" value=1000/>
         </div>
         
     </header>
