--- a/main.html
+++ b/main.html
@@ -35,6 +35,9 @@
         </div>
         
     </header>
+                                                  <script>function myFunction(val) {
+  alert("The input value has changed. The new value is: " + val);
+                                                         }</script>
 </body>
 
 </html>
