--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
           <a href=" index.html" class="btn btn-primary">Click Here</a>
             </div>
 
-          <input id="cart" type="text" name="cart" value=1000>
+          <input id="cart" type="text" name="cart" value=1000 onChange=()=>{this.value}>
           
         </div>
         
