--- a/main.html
+++ b/main.html
@@ -30,7 +30,21 @@
             </div>
 
           <input id="cart" type="text" name="cart" value=1000 onChange=()=>{this.value}>
-          
+          First Name: <input type="text" id="myText" value="Mickey">
+
+<p>Click the button to display the value of the value attribute of the text field.</p>
+
+<button onclick="myFunction()">Try it</button>
+
+<p id="demo"></p>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myText").value;
+  document.getElementById("demo").innerHTML = x;
+                                console.log(x);
+}
+</script>
         </div>
         
     </header>
