--- a/main.html
+++ b/main.html
@@ -15,9 +15,11 @@
         lpTag.identities = []
 lpTag.identities.push(identifyFn);
 console.log(lpTag.identities[0])
-const cartValue = "1000"
+//const cartValue = "1000"
+
 const title = document.title;
 var x = document.getElementById("myText").value;
+const cartValue = x;
 console.log("myText is ............"+x);
 
 function identifyFn(callback) {
