--- a/main.html
+++ b/main.html
@@ -66,45 +66,43 @@
                   <th scope="row">1</th>
                   <td><img src="ring.jpg" alt="ring" width="200" height="200"></td>
                   <td>Ring</td>
-                  <td>$3000<button onclick="myFunction()">Add</button></td>
+                  <td>$3000<button onclick="myFunction(3000)">Add</button></td>
                 </tr>
                 <tr>
                   <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
+                  <td><img src="bracelet.jpg" alt="bracelet" width="200" height="200"></td>
+                  <td>Bracelet</td>
+                  <td>$2000<button onclick="myFunction(2000)">Add</button><</td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
+                  <td><img src="earring.jpg" alt="earrings" width="200" height="200"></td>
+                  <td>Earrings</td>
+                  <td>$1000<button onclick="myFunction(1000)">Add</button><</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td><img src="necklace.jpg" alt="necklace" width="200" height="200"></td>
+                  <td>Necklace</td>
+                  <td>$5000<button onclick="myFunction(5000)">Add</button><</td>
                 </tr>
               </tbody>
             </table>
-      <div style="color:red;" id="errorMessage"></div>
-        </div>
-    <header class="text-center">
+      <div id="cart" name="cart" style="color:green;"></div>
+        </div><br><br>
+      <header class="text-center">
         <div className="card" style="width: 18rem;">
             <div className="card-body">
                 <h5 class="card-title">Authenticated Page</h5>
                 <p class="card-text text-warning bg-dark"">Please Go to the Unauthenticated Page</p>
-          <a href=" index.html" class="btn btn-primary">Click Here</a>
+                <a href=" index.html" class="btn btn-primary">Click Here</a>
             </div>
 
-          <input id="cart" type="text" name="cart" value=1000>
-          First Name: <input type="text" id="myText" value="Mickey">
-
-<p>Click the button to display the value of the value attribute of the text field.</p>
-
-<button onclick="myFunction()">Try it</button>
-
-<p id="demo"></p>
 
 <script>
-function myFunction() {
-  var x = document.getElementById("myText").value;
-  document.getElementById("demo").innerHTML = x;
-                                console.log(x);
+function myFunction(val) {
+  document.getElementById("cart").innerHTML = val;
+  console.log(val);
 }
 
 const title = document.title;
