--- a/main.html
+++ b/main.html
@@ -55,40 +55,40 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th colspan="3" scope="col">#</th>
-                  <th colspan="3" scope="col">Image</th>
-                  <th colspan="3" scope="col">Item</th>
-                  <th colspan="3" scope="col">Order</th>
+                  <th scope="col">#</th>
+                  <th scope="col">Image</th>
+                  <th scope="col">Item</th>
+                  <th scope="col">Order</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <th scope="row">1</th>
-                  <td><img src="ring.jpg" alt="ring" width="200" height="200"></td>
+                  <td><img src="ring.jpg" alt="ring" width="100" height="100"></td>
                   <td>Ring</td>
                   <td>$3000<button onclick="myFunction(3000)">Add</button></td>
                 </tr>
                 <tr>
                   <th scope="row">2</th>
-                  <td><img src="bracelet.jpg" alt="bracelet" width="200" height="200"></td>
+                  <td><img src="bracelet.jpg" alt="bracelet" width="100" height="100"></td>
                   <td>Bracelet</td>
                   <td>$2000<button onclick="myFunction(2000)">Add</button></td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
-                  <td><img src="earring.jpg" alt="earrings" width="200" height="200"></td>
+                  <td><img src="earring.jpg" alt="earrings" width="100" height="100"></td>
                   <td>Earrings</td>
                   <td>$1000<button onclick="myFunction(1000)">Add</button></td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
-                  <td><img src="necklace.jpg" alt="necklace" width="200" height="200"></td>
+                  <td><img src="necklace.jpg" alt="necklace" width="100" height="100"></td>
                   <td>Necklace</td>
                   <td>$5000<button onclick="myFunction(5000)">Add</button></td>
                 </tr>
               </tbody>
             </table>
-      <div id="cart" name="cart" style="color:green;"></div>
+            <div>Total is $  <span id="cart" name="cart" style="color:green;"></span></div>
         </div><br><br>
       <header class="text-center">
         <div className="card" style="width: 18rem;">
