--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
     
         <div class="container mt-10">
             <div id="app"><h4 style="color:blue; text-align: center;" >Order Your Jewelry</h4></div>
-            <table class="table table-dark">
+            <table class="table table-light">
               <thead>
                 <tr>
                   <th scope="col">#</th>
@@ -65,29 +65,29 @@
                   <th scope="row">1</th>
                   <td><img src="ring.jpg" alt="ring" width="100" height="100"></td>
                   <td>Ring</td>
-                  <td>$3000<button type="button" class="btn btn-warning" onclick="myFunction(3000)">Add</button></td>
+                  <td>$3000   <button type="button" class="btn btn-warning" onclick="myFunction(3000)">Add</button></td>
                 </tr>
                 <tr>
                   <th scope="row">2</th>
                   <td><img src="bracelet.jpg" alt="bracelet" width="100" height="100"></td>
                   <td>Bracelet</td>
-                  <td>$2000<button type="button" class="btn btn-warning" onclick="myFunction(2000)">Add</button></td>
+                  <td>$2000   <button type="button" class="btn btn-warning" onclick="myFunction(2000)">Add</button></td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
                   <td><img src="earring.jpg" alt="earrings" width="100" height="100"></td>
                   <td>Earrings</td>
-                  <td>$1000<button type="button" class="btn btn-warning" onclick="myFunction(1000)">Add</button></td>
+                  <td>$1000   <button type="button" class="btn btn-warning" onclick="myFunction(1000)">Add</button></td>
                 </tr>
                 <tr>
                   <th scope="row">4</th>
                   <td><img src="necklace.jpg" alt="necklace" width="100" height="100"></td>
                   <td>Necklace</td>
-                  <td>$5000<button type="button" class="btn btn-warning" onclick="myFunction(5000)">Add</button></td>
+                  <td>$5000   <button type="button" class="btn btn-warning" onclick="myFunction(5000)">Add</button></td>
                 </tr>
               </tbody>
             </table>
-            <div>Total is $  <span id="cart" name="cart" style="color:green;"></span></div>
+            <div><h5>Total is $  <span id="cart" name="cart" style="color:green;"></span></h5></div>
         </div><br><br>
       <header class="text-center">
         <div className="card" style="width: 18rem;">
