--- a/main.html
+++ b/main.html
@@ -55,36 +55,30 @@
             <table class="table table-light">
               <thead>
                 <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Image</th>
-                  <th scope="col">Item</th>
-                  <th scope="col">Order</th>
+                  <th scope="col">Ring</th>
+                  <th scope="col">Bracelet</th>
+                  <th scope="col">Earrings</th>
+                  <th scope="col">Necklace</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row">1</th>
-                  <td><img src="ring.jpg" alt="ring" width="100" height="100"></td>
-                  <td>Ring</td>
-                  <td>$3000   <button type="button" class="btn btn-warning" onclick="myFunction(3000)">Add</button></td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
+                  <td scope="row"><img src="ring.jpg" alt="ring" width="100" height="100"></td>
                   <td><img src="bracelet.jpg" alt="bracelet" width="100" height="100"></td>
-                  <td>Bracelet</td>
-                  <td>$2000   <button type="button" class="btn btn-warning" onclick="myFunction(2000)">Add</button></td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
                   <td><img src="earring.jpg" alt="earrings" width="100" height="100"></td>
-                  <td>Earrings</td>
-                  <td>$1000   <button type="button" class="btn btn-warning" onclick="myFunction(1000)">Add</button></td>
+                  <td><img src="necklace.jpg" alt="necklace" width="100" height="100"></td>
                 </tr>
                 <tr>
-                  <th scope="row">4</th>
-                  <td><img src="necklace.jpg" alt="necklace" width="100" height="100"></td>
-                  <td>Necklace</td>
-                  <td>$5000   <button type="button" class="btn btn-warning" onclick="myFunction(5000)">Add</button></td>
+                  <td scope="row">$2,000</td>
+                  <td>$3,000</td>
+                  <td>$4,000</td>
+                  <td>$5,000</td>
+                </tr>
+                <tr>
+                  <td scope="row"><button type="button" class="btn btn-warning" onclick="myFunction(2000)">Add</button></td>
+                  <td><button type="button" class="btn btn-warning" onclick="myFunction(3000)">Add</button></td>
+                  <td><button type="button" class="btn btn-warning" onclick="myFunction(4000)">Add</button></td>
+                  <td><button type="button" class="btn btn-warning" onclick="myFunction(5000)">Add</button></td>
                 </tr>
               </tbody>
             </table>
