--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
         <div class="container mt-10">
             <br><br>
             <div id="app"><h4 style="color:blue; text-align: center;" >Order Your Jewelry</h4></div>
-            <table class="table table-light">
+            <table class="table table-light table-borderless">
               <thead>
                 <tr>
                   <th scope="col">Ring</th>
