--- a/main.html
+++ b/main.html
@@ -75,14 +75,14 @@
                   <td>$5,000</td>
                 </tr>
                 <tr>
-                  <td scope="row"><button type="button" class="btn btn-warning" onclick="myFunction(2000)">Add</button></td>
-                  <td><button type="button" class="btn btn-warning" onclick="myFunction(3000)">Add</button></td>
-                  <td><button type="button" class="btn btn-warning" onclick="myFunction(4000)">Add</button></td>
-                  <td><button type="button" class="btn btn-warning" onclick="myFunction(5000)">Add</button></td>
+                  <td scope="row"><button type="button" class="btn btn-warning text-white" onclick="myFunction(2000)">Add</button></td>
+                  <td><button type="button" class="btn btn-warning text-white" onclick="myFunction(3000)">Add</button></td>
+                  <td><button type="button" class="btn btn-warning text-white" onclick="myFunction(4000)">Add</button></td>
+                  <td><button type="button" class="btn btn-warning text-white" onclick="myFunction(5000)">Add</button></td>
                 </tr>
               </tbody>
             </table>
-            <div><h5>Total is $  <span id="cart" name="cart" style="color:green;"></span></h5></div>
+            <div class="text-success"><h5>The cart is $  <span id="cart" name="cart" ></span></h5></div>
             <header class="text-center">
             <div className="card" style="width: 18rem;">
                 <div className="card-body">
